feat(dh): add sum by hour option in dropdown

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -266,6 +266,7 @@
   },
   "measurementResolution": {
     "ACTUAL_RESOLUTION": "Faktisk opløsning",
+    "SUM_OF_HOUR": "Timessum",
     "SUM_OF_DAY": "Dagssum",
     "SUM_OF_MONTH": "Månedsum"
   },
