--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1676,6 +1676,7 @@
         "continue": "Next",
         "startDateAndEndDateHaveDifferentMonth": "Start and end date must be within the same month",
         "maxDays": "Period cannot be longer than 31 days",
+        "maxMonths": "Period cannot be longer than 12 months",
         "selectEntireMonths": "Select entire months",
         "requestSuccess": "Measurements report has been requested.",
         "requestError": "Something went wrong. Measurements report was not requested. Please try again."
