feat(dh): move Settlement reports and Imbalance prices under Reports > Settlements

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -215,6 +215,7 @@
       "reports": {
         "menuGroupLabel": "Rapporter",
         "overview": "Rapport oversigt",
+        "settlements": "Afregninger",
         "missingMeasurementsLog": "Anmod om hullerlog"
       },
       "meteringPointDebug": "Debug målepunkt",
@@ -1524,6 +1525,9 @@
   },
   "imbalancePrices": {
     "topBarTitle": "Ubalancepriser",
+    "newPageLine1": "Siden er flyttet under Rapporter > Afregninger > Ubalancepriser",
+    "newPageLine2": "Denne side slettes den 1. august 2025. Husk at opdatere evt. bogmærker.",
+    "newPageLink": "Gå til Ubalancepriser",
     "table": {
       "columns": {
         "period": "Periode",
@@ -1554,11 +1558,19 @@
   "reports": {
     "topBarTitle": "Rapporter",
     "tabs": {
-      "settlementReports": "Afregning",
-      "measurementsReports": "Måledata"
+      "settlementReportsDeprecated": "Afregning",
+      "settlementReports": "Afregningsrapporter",
+      "measurementsReports": "Måledata",
+      "imbalancePrices": "Ubalancepriser"
+    },
+    "settlements": {
+      "topBarTitle": "Afregninger"
     },
     "settlementReports": {
       "title": "{{ reports.tabs.settlementReports }}",
+      "newPageLine1": "Siden er flyttet under Rapporter > Afregninger > Afregningsrapporter",
+      "newPageLine2": "Denne side slettes den 1. august 2025. Husk at opdatere evt. bogmærker.",
+      "newPageLink": "Gå til Afregningsrapporter",
       "emptyMessage": "Der er ingen afregningsrapporter",
       "errorTitle": "{{ shared.error.title }}",
       "errorMessage": "{{ shared.error.message }}",
