--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -216,6 +216,7 @@
       "reports": {
         "menuGroupLabel": "Reports",
         "overview": "Reports overview",
+        "settlements": "Settlements",
         "missingMeasurementsLog": "Request missing measurements log"
       },
       "wholesale": {
@@ -1523,6 +1524,9 @@
   },
   "imbalancePrices": {
     "topBarTitle": "Imbalance Prices",
+    "newPageLine1": "The page has moved to Reports > Settlements > Imbalance Prices",
+    "newPageLine2": "This page will be deleted on August 1st, 2025. Remember to update your bookmarks.",
+    "newPageLink": "Go to Imbalance Prices",
     "table": {
       "columns": {
         "period": "Period",
@@ -1553,11 +1557,19 @@
   "reports": {
     "topBarTitle": "Reports",
     "tabs": {
-      "settlementReports": "Settlement",
-      "measurementsReports": "Measurements"
+      "settlementReportsDeprecated": "Settlement",
+      "settlementReports": "Settlement reports",
+      "measurementsReports": "Measurements",
+      "imbalancePrices": "Imbalance prices"
+    },
+    "settlements": {
+      "topBarTitle": "Settlements"
     },
     "settlementReports": {
       "title": "{{ reports.tabs.settlementReports }}",
+      "newPageLine1": "The page has moved to Reports > Settlements > Settlement reports",
+      "newPageLine2": "This page will be deleted on August 1st, 2025. Remember to update your bookmarks.",
+      "newPageLink": "Go to Settlement reports",
       "emptyMessage": "There are no settlement reports",
       "errorTitle": "{{ shared.error.title }}",
       "errorMessage": "{{ shared.error.message }}",
