--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1633,8 +1633,9 @@
         "gridAreaHint": "{{ count }} valgte",
         "combineResultsInOneFile": "Kombiner netområder i en fil",
         "cancel": "Fortryd",
-        "confirm": "{{ reports.settlementReports.requestSettlementReport }}",
         "continue": "Næste",
+        "confirm": "{{ reports.settlementReports.requestSettlementReport }}",
+        "noCalculationsFound": "Der er ingen beregninger for den valgte periode og netområde(r)",
         "startDateIsBeforeMinDate": "Startdatoen kan ikke være ældre end 3,6 år + løbende måned",
         "startDateAndEndDateHaveDifferentMonth": "Start- og slutdato skal være i samme måned",
         "requestSuccess": "Afregningsrapport bestilt.",
