--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -202,12 +202,16 @@
   "sidebar": {
     "navigation": {
       "devExamples": {
-        "groupLabel": "Dev Examples",
+        "menuGroupLabel": "Dev Examples",
         "processes": "Processes"
       },
+      "messageArchive": {
+        "menuGroupLabel": "Message archive",
+        "messageArchive": "Request/Response messages",
+        "requestCalculation": "Request calculation data"
+      },
       "meteringPoints": "Metering Points",
-      "messageArchive": "Request/Response messages",
-      "marketParticipantActors": "Actors",
+      "marketParticipantActors": "Market participants",
       "marketParticipantOrganizations": "Organisations",
       "marketParticipantGridAreas": "Grid Areas",
       "eSett": "eSett",
@@ -224,7 +228,7 @@
         "calculations": "Calculations",
         "overview": "Overview",
         "settlementReports": "Settlement Reports",
-        "requestCalculation": "Request calculation data"
+        "requestCalculation": "{{ sidebar.navigation.messageArchive.requestCalculation }}"
       },
       "admin": {
         "menuGroupLabel": "Settings",
@@ -1917,6 +1921,9 @@
     },
     "requests": {
       "topBarTitle": "Request calculation data",
+      "newPageLine1": "The page has moved to Message archive > Request calculation data",
+      "newPageLine2": "This page will be deleted on August 1st, 2025.",
+      "newPageLink": "Go to Request calculation data",
       "results": "Requests",
       "button": "Request calculation data",
       "new": {
