--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -211,9 +211,11 @@
         "requestCalculation": "Request calculation data"
       },
       "meteringPoints": "Metering Points",
-      "marketParticipantActors": "Market participants",
-      "marketParticipantOrganizations": "Organisations",
-      "marketParticipantGridAreas": "Grid Areas",
+      "marketParticipant": {
+        "menuGroupLabel": "Market participants",
+        "marketParticipantMasterData": "Market participants master data",
+        "gridAreas": "Grid Areas"
+      },
       "eSett": "eSett",
       "imbalancePrices": "Imbalance Prices",
       "meteringPointDebug": "Debug metering point",
@@ -1296,6 +1298,9 @@
     },
     "gridAreas": {
       "topBarTitle": "Grid Areas",
+      "newPageLine1": "The page has moved to Market participants > Grid Areas",
+      "newPageLine2": "This page will be deleted on August 1st, 2025.",
+      "newPageLink": "Go to Grid Areas",
       "noGridAreas": "No grid areas found",
       "error": "An error occurred",
       "columns": {
@@ -2017,6 +2022,9 @@
     }
   },
   "admin": {
+    "newPageLine1": "The page has moved to Market participants > User Management",
+    "newPageLine2": "This page will be deleted on August 1st, 2025.",
+    "newPageLink": "Go to User Management",
     "userManagement": {
       "topBarTitle": "User Management",
       "connect": "Connect MitID",
