feat: add refetching indicator, add trim option to search components and adjust date "formatting" in wholesale

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -576,6 +576,7 @@
     "new": "Ny søgning",
     "results": "Resultater",
     "searchById": "Søg på ID",
+    "refetching": "Henter forretningsbeskeder...",
     "drawer": {
       "message": "Besked",
       "sender": "Afsender",
