--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -576,6 +576,7 @@
     "new": "New search",
     "results": "Results",
     "searchById": "Search by ID",
+    "refetching": "Fetching request and response messages...",
     "drawer": {
       "message": "Message",
       "receiver": "Receiver",
