--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -626,7 +626,7 @@
     },
     "documentType": {
       "ACKNOWLEDGEMENT": "Rejection (RSM-009)",
-      "NOTIFY_VALIDATED_MEASURE_DATA": "Send measurement data (RSM-012)",
+      "SEND_MEASUREMENTS": "Send measurement data (RSM-012)",
       "FORWARD_MEASUREMENTS": "Send measurement data (RSM-012)",
       "REQUEST_MEASUREMENTS": "Request for measurement data (RSM-015)",
       "REJECT_REQUEST_MEASUREMENTS": "Reject request for measurement data (RSM-015)",
