feat(dh, message-archive): update date handling to use dateRange for filters and forms

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -596,8 +596,7 @@
       "businessReason": "Forretningsårsag",
       "sender": "Afsender",
       "receiver": "Modtager",
-      "start": "Starttidspunkt",
-      "end": "Sluttidspunkt",
+      "dateRange": "Datointerval",
       "reset": "Nulstil",
       "confirm": "Søg"
     },
@@ -606,8 +605,7 @@
       "businessReason": "Forretningsårsag",
       "sender": "Afsender",
       "receiver": "Modtager",
-      "start": "Start",
-      "end": "Slut",
+      "dateRange": "Datointerval",
       "includeRelated": "Inkluder relaterede",
       "created": "Tidspunkt"
     },
