--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -596,8 +596,7 @@
       "businessReason": "Business reason",
       "sender": "Sender",
       "receiver": "Receiver",
-      "start": "Start time",
-      "end": "End time",
+      "dateRange": "Date range",
       "reset": "Reset",
       "confirm": "Search"
     },
@@ -606,8 +605,7 @@
       "businessReason": "Business reason",
       "sender": "Sender",
       "receiver": "Receiver",
-      "start": "Start",
-      "end": "End",
+      "dateRange": "Date range",
       "includeRelated": "Include related",
       "created": "Created"
     },
