Add grid loss notification

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -57,6 +57,10 @@
       "ActorConsolidationScheduled": {
         "headline": "Market participants consolidation",
         "message": "\"{{ relatedToId }}\" is undergoing consolidation"
+      },
+      "GridLossValidationError": {
+        "headline": "Grid loss process failed",
+        "message": "Process for calculating grid loss and system correction for grid area \"{{ relatedToId }}\" failed"
       }
     }
   },
