--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -57,6 +57,10 @@
       "ActorConsolidationScheduled": {
         "headline": "Sammenlægning af aktører",
         "message": "\"{{ relatedToId }}\" ophører snart"
+      },
+      "GridLossValidationError": {
+        "headline": "Nettab's process fejlet",
+        "message": "Proces for beregning af nettab og systemkorrektion for netområde \"{{ relatedToId }}\" er fejlet"
       }
     }
   },
