feat(dh): move upload measurements to actions menu

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -413,6 +413,10 @@
         "CONNECTED": "Connected",
         "DISCONNECTED": "Disconnected"
       },
+      "actions": {
+        "actionsButton": "Actions",
+        "upload": "Upload measurements"
+      },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
         "showAddressDetailsLink": "Show address details",
@@ -485,8 +489,7 @@
         "day": "Day",
         "month": "Month",
         "year": "Year",
-        "allYears": "All years",
-        "upload": "Upload measurements"
+        "allYears": "All years"
       },
       "columns": {
         "observationTime": "Time",
