--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -413,6 +413,10 @@
         "CONNECTED": "Tilsluttet",
         "DISCONNECTED": "Afbrudt"
       },
+      "actions": {
+        "actionsButton": "Handlinger",
+        "upload": "Upload måledata"
+      },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
         "showAddressDetailsLink": "Vis alle adresseoplysninger",
@@ -484,8 +488,7 @@
         "day": "Dag",
         "month": "Måned",
         "year": "År",
-        "allYears": "Alle år",
-        "upload": "Upload måledata"
+        "allYears": "Alle år"
       },
       "dateLabel": "Dato",
       "columns": {
