Update grid loss notification

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -60,7 +60,7 @@
       },
       "GridLossValidationError": {
         "headline": "Nettab's process fejlet",
-        "message": "Proces for beregning af nettab og systemkorrektion for netområde \"{{ relatedToId }}\" er fejlet"
+        "message": "Proces for beregning af nettab og systemkorrektion for målepunkt \"{{ relatedToId }}\" er fejlet"
       }
     }
   },
