--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -60,7 +60,7 @@
       },
       "GridLossValidationError": {
         "headline": "Grid loss process failed",
-        "message": "Process for calculating grid loss and system correction for grid area \"{{ relatedToId }}\" failed"
+        "message": "Process for calculating grid loss and system correction for metering point \"{{ relatedToId }}\" failed"
       }
     }
   },
