--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -393,7 +393,8 @@
         "notActualAddress": "{{ meteringPoint.overview.shared.notActualAddress }}",
         "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
         "annualSettlement": "Årsbaseret afregning",
-        "productObligation": "Aftagepligt"
+        "productObligation": "Aftagepligt",
+        "manuallyHandled": "Manuelt importeret"
       },
       "customer": {
         "title": "Kunde",
