--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -60,7 +60,7 @@
       },
       "GridLossValidationError": {
         "headline": "Nettab's process fejlet",
-        "message": "Proces for beregning af nettab og systemkorrektion for netområde \"{{ relatedToId }}\" er fejlet"
+        "message": "Proces for beregning af nettab og systemkorrektion for målepunkt \"{{ relatedToId }}\" er fejlet"
       }
     }
   },
@@ -393,7 +393,8 @@
         "notActualAddress": "{{ meteringPoint.overview.shared.notActualAddress }}",
         "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
         "annualSettlement": "Årsbaseret afregning",
-        "productObligation": "Aftagepligt"
+        "productObligation": "Aftagepligt",
+        "manuallyHandled": "Manuelt importeret"
       },
       "customer": {
         "title": "Kunde",
@@ -600,7 +601,8 @@
       "businessReason": "Forretningsårsag",
       "sender": "Afsender",
       "receiver": "Modtager",
-      "dateRange": "Datointerval",
+      "start": "Starttidspunkt",
+      "end": "Sluttidspunkt",
       "reset": "Nulstil",
       "confirm": "Søg"
     },
@@ -609,7 +611,8 @@
       "businessReason": "Forretningsårsag",
       "sender": "Afsender",
       "receiver": "Modtager",
-      "dateRange": "Datointerval",
+      "start": "Start",
+      "end": "Slut",
       "includeRelated": "Inkluder relaterede",
       "created": "Tidspunkt"
     },
