--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -60,7 +60,7 @@
       },
       "GridLossValidationError": {
         "headline": "Grid loss process failed",
-        "message": "Process for calculating grid loss and system correction for grid area \"{{ relatedToId }}\" failed"
+        "message": "Process for calculating grid loss and system correction for metering point \"{{ relatedToId }}\" failed"
       }
     }
   },
@@ -393,7 +393,8 @@
         "notActualAddress": "{{ meteringPoint.overview.shared.notActualAddress }}",
         "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
         "annualSettlement": "Annual settlement",
-        "productObligation": "Product obligation"
+        "productObligation": "Product obligation",
+        "manuallyHandled": "Manually imported"
       },
       "customer": {
         "title": "Customer",
@@ -600,7 +601,8 @@
       "businessReason": "Business reason",
       "sender": "Sender",
       "receiver": "Receiver",
-      "dateRange": "Date range",
+      "start": "Start time",
+      "end": "End time",
       "reset": "Reset",
       "confirm": "Search"
     },
@@ -609,7 +611,8 @@
       "businessReason": "Business reason",
       "sender": "Sender",
       "receiver": "Receiver",
-      "dateRange": "Date range",
+      "start": "Start",
+      "end": "End",
       "includeRelated": "Include related",
       "created": "Created"
     },
