Add dateRange to filters and remove start and end

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -611,8 +611,7 @@
       "businessReason": "Business reason",
       "sender": "Sender",
       "receiver": "Receiver",
-      "start": "Start",
-      "end": "End",
+      "dateRange": "Date range",
       "includeRelated": "Include related",
       "created": "Created"
     },
