feat(dh): allow large text files in measurements reports

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1683,6 +1683,7 @@
         "meteringPointTypes": "Målepunktstyper",
         "gridArea": "Netområde",
         "gridAreaHint": "{{ count }} valgte",
+        "allowLargeTextFiles": "Tillad store filer",
         "period": "Periode",
         "energySupplier": "Elleverandør",
         "measurementResolution": "Måleopløsning",
