--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1682,6 +1682,7 @@
         "meteringPointTypes": "Metering point types",
         "gridArea": "Grid area",
         "gridAreaHint": "{{ count }} selected",
+        "allowLargeTextFiles": "Allow large files",
         "period": "Period",
         "energySupplier": "Energy supplier",
         "measurementResolution": "Measurement resolution",
