feat(dh): allow metering point ids in measurements report

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1680,6 +1680,12 @@
         "title": "{{ reports.measurementsReports.requestMeasurementsReport }}",
         "requestAs": "Anmod som",
         "meteringPointTypes": "Målepunktstyper",
+        "meteringPointIDsLabel": "Målepunkts-ID",
+        "switchToMeteringPointIDs": "Vælg specifikke målepunkter",
+        "meteringPointIDsHintOne": "Adskil flere målepunkts-ID'er med ,",
+        "meteringPointIDsHintTwo": "Der må max være {{ maxIDs }} målepunkts-ID'er.",
+        "invalidMeteringPointIDs": "Et eller flere målepunkts-ID'er er ugyldige",
+        "maxMeteringPointIDsExceeded": "{{ reports.measurementsReports.requestReportModal.meteringPointIDsHintTwo }} Indtastet: {{ currentNumber }}.",
         "gridArea": "Netområde",
         "gridAreaHint": "{{ count }} valgte",
         "allowLargeTextFiles": "Tillad store filer",
