--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -369,6 +369,20 @@
       },
       "measurements": {
         "tabLabel": "Måledata"
+      },
+      "failedMeasurements": {
+        "tabLabel": "Fejlede måledata"
+      }
+    },
+    "failedMeasurements": {
+      "filters": {
+        "created": "Oprettet"
+      },
+      "columns": {
+        "createdAt": "Oprettet tidspunkt",
+        "transactionId": "Transaktions-ID",
+        "failedAt": "Fejlet tidspunkt",
+        "errorText": "Fejl"
       }
     },
     "overview": {
