feat(dh): allow metering point ids in measurements report (#4571)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1680,6 +1680,12 @@
         "title": "{{ reports.measurementsReports.requestMeasurementsReport }}",
         "requestAs": "Request as",
         "meteringPointTypes": "Metering point types",
+        "meteringPointIDsLabel": "Metering point IDs",
+        "switchToMeteringPointIDs": "Choose specific metering points",
+        "meteringPointIDsHintOne": "Separate multiple metering point IDs by ,",
+        "meteringPointIDsHintTwo": "A maximum of {{ maxIDs }} metering point IDs are allowed.",
+        "invalidMeteringPointIDs": "One or more metering point IDs are invalid",
+        "maxMeteringPointIDsExceeded": "{{ reports.measurementsReports.requestReportModal.meteringPointIDsHintTwo }} Current number: {{ currentNumber }}.",
         "gridArea": "Grid area",
         "gridAreaHint": "{{ count }} selected",
         "allowLargeTextFiles": "Allow large files",
