--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -382,7 +382,8 @@
         "createdAt": "Oprettet tidspunkt",
         "transactionId": "Transaktions-ID",
         "failedAt": "Fejlet tidspunkt",
-        "errorText": "Fejl"
+        "errorText": "Fejl",
+        "failedCount": "Fejlet antal gange"
       }
     },
     "overview": {
