--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -383,6 +383,7 @@
         "created": "Created"
       },
       "columns": {
+        "meteringPointId": "Metering point ID",
         "createdAt": "Created at",
         "transactionId": "Transaction-ID",
         "failedAt": "Failed at",
@@ -2386,6 +2387,9 @@
       "tabLabel": "Metering points",
       "gridArea": "Grid area",
       "packageNumber": "Package no. {{ packageNumber }}"
+    },
+    "failedMeasurements": {
+      "tabLabel": "Failed measurements"
     },
     "uploadButton": "Upload file with metering points master data",
     "uploadInProgress": "Upload in progress",
