Save working state

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -563,6 +563,8 @@
         "measureUnit": "Måleenhed",
         "dropzone": "Indlæs CSV-fil",
         "datepicker": "Start driftsdøgn",
+        "datepickerUtcInfo": "Tidspunktet vil automatisk  blive overført til UTC-tid.",
+        "uploadNewFile": "Upload ny fil",
         "table": {
           "positionCount": "Antal af positioner",
           "sum": "Sum"
