--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -563,6 +563,8 @@
         "measureUnit": "Measure unit",
         "dropzone": "Load CSV file",
         "datepicker": "Start operation day",
+        "datepickerUtcInfo": "The time will automatically be converted to UTC.",
+        "uploadNewFile": "Upload new file",
         "table": {
           "positionCount": "Number of positions",
           "sum": "Sum"
