Added closeddown and connected dates

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -447,7 +447,9 @@
         "otherSubTitle": "Andet",
         "resolutionLabel": "Tidsopløsning",
         "measureUnit": "Enhed",
-        "product": "Produkt"
+        "product": "Produkt",
+        "connectionDate": "Tilsluttet",
+        "closedDownDate": "Nedlagt"
       },
       "customerContactDetails": {
         "title": "Kontakter",
