--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -447,7 +447,9 @@
         "otherSubTitle": "Other",
         "resolutionLabel": "Meter reading occurrence",
         "measureUnit": "Measure unit",
-        "product": "Product"
+        "product": "Product",
+        "connectionDate": "Connected",
+        "closedDownDate": "Discontinued"
       },
       "customerContactDetails": {
         "title": "Contacts",
