--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -373,6 +373,22 @@
       },
       "measurements": {
         "tabLabel": "Measurements"
+      },
+      "failedMeasurements": {
+        "tabLabel": "Failed measurements"
+      }
+    },
+    "failedMeasurements": {
+      "filters": {
+        "created": "Created"
+      },
+      "columns": {
+        "meteringPointId": "Metering point ID",
+        "createdAt": "Created at",
+        "transactionId": "Transaction-ID",
+        "failedAt": "Failed at",
+        "errorText": "Error",
+        "failedCount": "Failed count"
       }
     },
     "overview": {
@@ -2373,6 +2389,9 @@
       "tabLabel": "Metering points",
       "gridArea": "Grid area",
       "packageNumber": "Package no. {{ packageNumber }}"
+    },
+    "failedMeasurements": {
+      "tabLabel": "Failed measurements"
     },
     "uploadButton": "Upload file with metering points master data",
     "uploadInProgress": "Upload in progress",
