--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -485,6 +485,7 @@
       }
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
+    "relatedMeteringPointsLoading": "Henter relaterede målepunkter",
     "historicalMeteringPoints": "Historiske målepunkter",
     "measurements": {
       "navigation": {
