--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -485,6 +485,7 @@
       }
     },
     "relatedMeteringPointsTitle": "Related metering points",
+    "relatedMeteringPointsLoading": "Loading related metering points",
     "historicalMeteringPoints": "Historical metering points",
     "measurements": {
       "dateLabel": "Date",
