Loading indicator for related metering points, and a fix for column o… (#4595)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -501,6 +501,8 @@
       }
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
+    "relatedMeteringPointsLoading": "Henter relaterede målepunkter",
+    "relatedMeteringPointsEmpty": "Der er ingen relaterede målepunkter",
     "historicalMeteringPoints": "Historiske målepunkter",
     "measurements": {
       "navigation": {
