--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -501,6 +501,8 @@
       }
     },
     "relatedMeteringPointsTitle": "Related metering points",
+    "relatedMeteringPointsLoading": "Loading related metering points",
+    "relatedMeteringPointsEmpty": "There are no related metering points",
     "historicalMeteringPoints": "Historical metering points",
     "measurements": {
       "dateLabel": "Date",
